[project]
name = "pbixtrans"
dynamic = ["version"]
description = "Translate a PBIX report visuals into another language"
readme = "README.md"
authors = [
    {name = "tbrus01", email = "brus.tomasz@outlook.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "googletrans==4.0.0-rc1",
]

[project.urls]
Homepage = "https://github.com/tbrus/pbixtrans"

[project.scripts]
pbixtrans = "pbixtrans.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "pbixtrans._version.version" }